<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_el_titulo"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/ingrese_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion" />


    <EditText
        android:id="@+id/descripcion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/ingrese_descripcion"
        android:importantForAutofill="no"
        android:lines="20"
        android:minLines="1"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:singleLine="false"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Precio" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingrese_Precio"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />


    <!---<Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:minHeight="24dp"/>-->
    <Button
        android:id="@+id/buttonSeleccionarCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seleccionar Categoria" />


    <TextView
        android:id="@+id/textCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="24sp"
        android:text="@string/CategoriaSeleccionada" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textDescuentos"
            android:layout_width="276dp"
            android:layout_height="wrap_content"

            android:text="@string/descuento"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Switch
            android:id="@+id/switchDescuento"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_gravity="right"
            android:minHeight="48dp"
            android:textOff="OFF"
            android:textOn="ON"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textCero"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="8dp"
            android:text="0"
            android:visibility="gone"

            app:layout_constraintEnd_toStartOf="@+id/seekBarPorcentaje"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/textPor"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="296dp"
            android:text="0"
            android:visibility="gone"

            app:layout_constraintStart_toEndOf="@+id/seekBarPorcentaje"
            app:layout_constraintStart_toStartOf="@+id/seekBarPorcentaje"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="5dp" />

        <SeekBar
            android:id="@+id/seekBarPorcentaje"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <CheckBox
        android:id="@+id/checkBoxRetiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Retiro"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDrireccionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Direccion"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTextDireccionRetiro"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DireccionRetiro"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:visibility="gone"

        />


    <CheckBox
        android:id="@+id/checkAceptarTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AceptarTerminos"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buttonPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar" />


</LinearLayout>